# naive_matrices

./: CMakeLists.txt  main.cpp  matrix.hpp  obfuscate.cpp  obfuscate.hpp
